--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@dnd-kit/utilities": "^3.2.2",
     "@phosphor-icons/react": "^2.1.10",
     "@supabase/supabase-js": "^2.87.1",
+    "@tanstack/react-virtual": "^3.13.13",
     "motion": "^12.23.24",
     "ogl": "^1.0.11",
     "react": "^19.2.0",
